////


[[release-notes-4.x]]
=== Node.js Agent version 4.x

See the <<upgrade-to-v4>> guide.


==== Unreleased

[float]
===== Breaking changes

* Drop support for next@11. Next.js instrumentation support is currently in
  technical preview, so it is not considered a semver-major change to drop
  support for this old version of next. ({pull}3664[#3664])

[float]
===== Features

[float]
===== Bug fixes

[float]
===== Chores


[[release-notes-4.1.0]]
==== 4.1.0 - 2023/10/09

[float]
===== Features

* Update <<opentelemetry-bridge>> support to `@opentelemetry/api` version 1.6.0.
  {pull}3622[#3622]

* Add support for `@aws-sdk/client-dynamodb`, one of the AWS SDK v3 clients.
  ({issues}2958[#2958])

* Add support for `@aws-sdk/client-sns`, one of the AWS SDK v3 clients.
  ({issues}2956[#2956])

* Add support for `@aws-sdk/client-sqs`, one of the AWS SDK v3 clients.
  ({issues}2957[#2957])

* Fixes for some values of the <<disable-instrumentations>> config setting.
  "redis" will now properly disable instrumentation for redis@4.
  "next" will propertly disable all Next.js instrumentation.
  ({pull}3658[#3658])

[float]
===== Bug fixes

* Changes to cloud metadata collection for Google Cloud (GCP). Most notably
  the `cloud.project.id` field is now the `project-id` from
  https://cloud.google.com/compute/docs/metadata/default-metadata-values#project_metadata
  rather than the `numeric-project-id`. This matches the value produced by
  Elastic Beats (like filebeat). {issues}3614[#3614]


[[release-notes-4.0.0]]
==== 4.0.0 - 2023/09/07

See the <<upgrade-to-v4>> guide.

[float]
===== Breaking changes

* Set the new minimum supported Node.js to version 14.17.0.
  Users of earlier Node.js versions can use elastic-apm-node v3.x, which
  supports back to Node.js v8.6.

* Ignore a `timer` option passed to `startTransaction()` and `startSpan()` APIs.
  This option was never documented. It would be surprising if any user is
  impacted by this.
