@@ -396,6 +396,18 @@ Agent.prototype.getServiceName = function () {
   return this._conf ? this._conf.serviceName : undefined;
 };
 
+Agent.prototype.getServiceVersion = function () {
+  return this._conf ? this._conf.serviceVersion : undefined;
+};
+
+Agent.prototype.getServiceEnvironment = function () {
+  return this._conf ? this._conf.environment : undefined;
+};
+
+Agent.prototype.getServiceNodeName = function () {
+  return this._conf ? this._conf.serviceNodeName : undefined;
+};
+
 Agent.prototype.setFramework = function ({ name, version, overwrite = true }) {
   if (!this._apmClient || !this._conf) {
     return;
